# qr_decoder

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  api.rest
.github/workflows/: build_docker.yml
src/: lib.rs  main.rs
